--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1"
